@@ -683,29 +683,6 @@ table.fieldset .error-with-field small {
   color: #999;
 }
 
-/* Comments --------------------------------------------------------------- */
-
-#comments-def { margin-top: 20px; position: relative; }
-#comments-def .comments {}
-#comments-def .modify { position: absolute; top: 0px; right: 5px; width: 50px }
-#comments-def div {
-  padding: 2px 4px;
-  font-size: 90%;
-  font-weight: normal;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #ddd;
-}
-#comments { list-style: none; }
-#comments li { position: relative; padding: 5px 10px; border-bottom: 1px solid #ddd; }
-#comments li:hover { background-color: #eee; }
-#comments p { margin-top: .6em; }
-#comments .even {}
-#comments .odd {}
-#comments .infos { position: absolute; top: 8px; right: 10px; font-size: .83em; color: #666; }
-#comments .approve { color: #7a7; background: #dfd; border-color: #9c9; }
-#comments .approve a { color: #696; }
-#comments .approve .infos { color: #8b8; }
-
 /* Calendar (Date picker) ------------------------------------------------- */
 
 .dpDiv {
